# IoTDataKit

./: CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md
.github/: config.yml
.github/ISSUE_TEMPLATE/: bug-report.yml  feature-request.yml
iot_data_kit/: CMakeLists.txt  IoTData_example.sh  run_iot_data_example.sh
iot_data_kit/examples/: CMakeLists.txt  main.cpp
iot_data_kit/include/: DataSet.h  IoTData.h  IoTDataException.h
iot_data_kit/src/: IoTData.cpp  IoTDataException.cpp
iot_data_kit/tests/: CMakeLists.txt  DataSetTests.cpp  IoTDataTests.cpp
